# mscompress

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  acconfig.h  autogen.sh  binfiles  config.h.in  configure  configure.ac  configure.in  format.txt  magic.add  magic.mscompress  mscompress.c  mscompress.lsm  msexpand.c  version.c
src/: Makefile.am  mscompress.1  mscompress.c  msexpand.1  msexpand.c  version.c
test/: Makefile  Makefile.am  test.compressed  test.sh  test.txt
