dnl Process this file with autoconf to produce a configure script.
AC_INIT(version.c)

AC_CANONICAL_HOST
OS_TYPE="$host"
AC_SUBST(OS_TYPE)

VERSION=`sed -e 's/^.*"\(.*\)";$/\1/' version.c`
echo "Package: mscompress-$VERSION"
AC_SUBST(VERSION)

AC_DEFINE_UNQUOTED(BUILDHOST,"`hostname`")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_HEADER(config.h:config.h.in)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h getopt.h)
AC_C_BIGENDIAN

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
